# aoc

./: .gitignore  README.md  bsconfig.json  index.html  main.js
2018/haskell/: package.yaml
2018/haskell/test/: Advent15Spec.hs  Advent9Spec.hs  Spec.hs
2018/inputs/: 4.txt
2018/reasonml-bucklescript/src/: Advent9.re  Util.re
2018/reasonml-dune/src/: advent2.re
2019/elm/: elm.json
2020/purescript/: spago.dhall
advent1/: .gitignore  package.json  test.txt
advent1/src/: Demo.bs.js  Demo.re  advent2.bs.js  advent2.re
decent/: ChangeLog.md  README.md  decent.cabal  package.yaml  stack.yaml
decent/aoc/: Puzzle1.dc  Puzzle2.dc  Puzzles.dc
decent/app/: Main.hs
decent/src/: Base.dc  Env.hs  Interpreter.hs  Parser.hs  Types.hs
decent/test/: BaseTest.dc  InterpreterSpec.hs  NativeSpec.hs  ParserSpec.hs  Spec.hs  TestUtils.dc  TestUtils.hs
haskell/: package.yaml  stack.yaml
haskell/aoc/: .gitignore  README.md  package.yaml  stack.yaml
haskell/app/: Advent1.hs  Advent12.hs  Advent13.hs  Advent15.hs
haskell/lib/: Parsers.hs
haskell/test/: Advent12Spec.hs  Advent15Spec.hs  Advent16Spec.hs  Advent9Spec.hs  Main.hs  PathfindingSpec.hs
inputs/: 10.txt
purebs/: bsconfig.json  package-lock.json  package.json
purebs/src/: Advent10.re  Advent11.re  Advent7.re  Util.re  advent7.bs.js  advent7.re  advent8.re
reasonml-bucklescript/: .gitignore  package.json
reasonml-bucklescript/src/: Advent10.re
reasonml-dune/: .gitignore
reasonml-dune/src/: advent3.re  advent4.re
src/: advent1.re  advent2.re  advent3.re  advent4.re  advent5.re  advent6.re  dune
(+56 files in other folders)
