(executable
  (name advent1)
  (modules advent1)
  (libraries batteries))

(executable
  (name advent2)
  (modules advent2)
  (libraries batteries))

(executable
  (name advent3)
  (modules advent3)
  (libraries batteries re))

(executable
  (name advent4)
  (modules advent4)
  (libraries batteries re)
  (preprocess (pps ppx_inline_test))
)